remove rx connect on object prototype && some improvements

--- a/src/admin/components/bonuses/template.html
+++ b/src/admin/components/bonuses/template.html
@@ -1,15 +1,11 @@
-<form #wrapper class="mdl-grid">
+<ul #wrapper>
     {{#each bonusCards}}
-    <div style="margin: 4px; min-height: auto;"
-         class="mdl-card mdl-cell--3-col mdl-shadow--2dp mdl-color--grey-50">
-        <div class="mdl-card__title mdl-color--primary mdl-color-text--primary-contrast">
-            {{this.title}}
+    <li class="list-item">
+        <div style="margin: 4px; min-height: auto;">
+            {{this.title}} CREDITO: {{this.credit}} TRATAMIENTOS: {{this.treatmentsString}}
+            <span style="float: right; display: inline-block">PRECIO: {{this.price}}</span>
         </div>
-        <div style="padding: 10px;">
-            <div>PRECIO: {{this.price}}</div>
-            <div>CREDITO: {{this.credit}}</div>
-            <div>TRATAMIENTOS: {{this.treatmentsString}}</div>
-        </div>
-    </div>
+        <div style="clear: both"></div>
+    </li>
     {{/each}}
-</form>
+</ul>
