fix some descriptions

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -28,6 +28,7 @@
           content="{{htmlWebpackPlugin.options.description}}">
     <meta name="robots" content="noodp">
     <meta property="fb:app_id" content="1950796945206063">
+    <meta property="og:image" content="{{htmlWebpackPlugin.options.image}}">
     <meta property="og:locale" content="es_ES">
     <meta property="og:type" content="website">
     <meta id="og-meta-title" property="og:title" content="{{htmlWebpackPlugin.options.title}}">
