--- a/src/public/components/homePage/homePage.html
+++ b/src/public/components/homePage/homePage.html
@@ -20,7 +20,7 @@
                 <span #icons></span>
             </div>
             <div style="height: 27px; margin-top: 20px; clear: both;">
-                <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=170&layout=button&action=like&size=large&show_faces=false&share=true&height=65&appId=1950796945206063"
+                <iframe src="https://www.facebook.com/plugins/like.php?href=https://www.facebook.com/inandoutbelleza&width=170&layout=button&action=like&size=large&show_faces=false&share=true&height=65&appId=1950796945206063"
                         width="170" height="65" style="border:none;overflow:hidden; display: inline-block;height: 46px;vertical-align: middle;width: 200px;"
                         scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 <a href="https://www.instagram.com/inandoutmalaga/" target="_blank"><img src="/assets/images/instagram.png" style="width: 100px"/></a>
