add foot to orders

--- a/src/admin/components/orders/template.html
+++ b/src/admin/components/orders/template.html
@@ -1,3 +1,8 @@
 <form #wrapper>
     <div #orders></div>
+    <footer #footer class="mdl-mega-footer mdl-grid">
+        <div class="mdl-cell--3-col" #month></div>
+        <div class="mdl-cell--3-col" #count></div>
+        <div class="mdl-cell--3-col" #total></div>
+    </footer>
 </form>
