bonus cards on phone

--- a/src/admin.hbs
+++ b/src/admin.hbs
@@ -52,12 +52,13 @@
         <button class="mdl-snackbar__action" type="button"></button>
     </div>
     <div id="modal"></div>
+    <video id="preview" style="display: none"></video>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
     <script src="/assets/vendor/material.min.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="/assets/vendor/material.select.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="/assets/vendor/nicEdit.js?v={{htmlWebpackPlugin.options.version}}"></script>
-    <script src="/assets/vendor/polyfills.min.js"></script>
+    <script src="/assets/vendor/instascan.min.js"></script>
     <script src="/admin.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
 </body>
 </html>
