bonus cards on phone

--- a/src/public/components/header/header.scss
+++ b/src/public/components/header/header.scss
@@ -50,14 +50,13 @@
   margin: 5px 0;
   padding: 0 15px;
   cursor: pointer;
+  position: relative;
   text-decoration: none;
 }
 #divider {
   float: right;
 }
 #notifybook {
-  right: 10px;
-  top: 10px;
   color: white;
 }
 
