fix clients duplicates

--- a/src/admin/components/clients/clients-list.html
+++ b/src/admin/components/clients/clients-list.html
@@ -2,7 +2,7 @@
     {{#each clients}}
     <li class="list-item">
         <div style="max-width: calc(100% - 200px); display: inline-block;">
-            {{this.online}} {{this.surname}} {{this.name}},
+            {{this.online}} {{this.name}} {{this.surname}},
             <a href="mailto:{{this.email}}">{{this.email}}</a>
             -
             <a href="tel:{{this.tel}}">{{this.tel}}</a>
