admin new feature

--- a/src/admin/components/clients/style.scss
+++ b/src/admin/components/clients/style.scss
@@ -14,6 +14,13 @@
   z-index: 1;
 }
 
+#resetcard {
+  position: fixed;
+  right: 170px;
+  bottom: 68px;
+  z-index: 1;
+}
+
 #add {
   position: fixed;
   right: 10px;
