--- a/src/admin/components/menuItems/template.html
+++ b/src/admin/components/menuItems/template.html
@@ -15,8 +15,16 @@
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">account_balance_wallet</i>
         {{urls.cash.menu}}
     </a>
+    <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.bills.href}}">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">account_balance</i>
+        {{urls.bills.menu}}
+    </a>
+    <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.summary.href}}">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">assessment</i>
+        {{urls.summary.menu}}
+    </a>
     <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.orders.href}}">
-        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_atm</i>
         {{urls.orders.menu}}
     </a>
     <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.print.href}}">
@@ -26,9 +34,5 @@
     <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.newsletter.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">email</i>
         {{urls.newsletter.menu}}
-    </a>
-    <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.bonuses.href}}">
-        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">toc</i>
-        {{urls.bonuses.menu}}
     </a>
 </nav>
