fix calendar timezone

--- a/src/admin/components/history/template.html
+++ b/src/admin/components/history/template.html
@@ -55,6 +55,16 @@
 
         </div>
         <button type="button"
+                style="position: absolute;right: 150px;bottom: 10px;"
+                onclick="this.form.addPromotion()"
+                class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"
+                data-upgraded=",MaterialButton,MaterialRipple">
+            PR
+            <span class="mdl-button__ripple-container">
+                        <span class="mdl-ripple"></span>
+            </span>
+        </button>
+        <button type="button"
                 style="position: absolute;right: 10px;bottom: 10px;"
                 onclick="this.form.addBonus()"
                 class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"
