fix bills errors escape

--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -7,6 +7,8 @@
     </div>
     <div #carmen_v class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
+    <div #jolly class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
+    </div>
     <div #estefania class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
     <div #cristina class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
