--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -297,6 +297,11 @@ th {
     color: black !important;
 }
 
+.process-color-21 {
+    background-color: #0dff29 !important;
+    color: black !important;
+}
+
 /** NOTE */
 .process-color-96 {
     background-color: #ffffff !important;
