--- a/src/index.hbs
+++ b/src/index.hbs
@@ -175,6 +175,8 @@
 </script>
 <script src="/assets/vendor/polyfills.min.js"></script>
 <script>window.stripeKey = '{{htmlWebpackPlugin.options.stripeKey}}'</script>
+<canvas id="snow" style="position: absolute;top: 0;pointer-events: none;"></canvas>
+<script src="/assets/vendor/snow.js"></script>
 <script src="/public.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
 </body>
 </html>
