--- a/src/public/components/icon/icon.html
+++ b/src/public/components/icon/icon.html
@@ -6,7 +6,7 @@
             <div class="fill"></div>
         </div>
     </div>
-    <div class="green-color" #icon>
+    <div #icon>
         <span #notify class="icon-notify">!</span>
     </div>
     <div #text class="dark-grey-color"></div>
