--- a/src/admin/components/cash/edit-cash.html
+++ b/src/admin/components/cash/edit-cash.html
@@ -8,7 +8,7 @@
                 <input #date autocomplete="off" class="mdl-textfield__input" type="datetime-local" id="date">
             </div>
 
-            <div class="mdl-selectfield mdl-js-selectfield">
+            <div #clientwrapper class="mdl-selectfield mdl-js-selectfield">
                 <select #client id="clientId" name="clientId" class="mdl-selectfield__select">
 
                 </select>
