--- a/src/admin/components/menuHeader/template.html
+++ b/src/admin/components/menuHeader/template.html
@@ -4,5 +4,13 @@
         </div>
         <div #text2>centro de belleza</div>
     </div>
-
+    <div style="    position: absolute;
+    top: 91px;
+    background: #b7b7b7;
+    width: 202px;
+    padding: 1px 12px;
+    color: white;
+    border-radius: 4px;
+    text-align: right;
+    font-size: 11px;" #spaintime></div>
 </header>
