timezone fix revenge

--- a/src/admin.hbs
+++ b/src/admin.hbs
@@ -59,6 +59,6 @@
     <script src="/assets/vendor/material.select.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="/assets/vendor/nicEdit.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="/assets/vendor/instascan.min.js"></script>
-    <script src="/admin.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
+    <script src="{{ htmlWebpackPlugin.files.chunks.admin.entry }}"></script>
 </body>
 </html>
