fix booking timezone offset

--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -302,6 +302,11 @@ th {
     color: black !important;
 }
 
+.process-color-22 {
+    background-color: #c5cbcb !important;
+    color: black !important;
+}
+
 /** NOTE */
 .process-color-96 {
     background-color: #ffffff !important;
