--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -307,6 +307,11 @@ th {
     color: black !important;
 }
 
+.process-color-23 {
+    background-color: #5c00b8 !important;
+    color: #ffffff !important;
+}
+
 /** NOTE */
 .process-color-96 {
     background-color: #ffffff !important;
