add susanna to workers

--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -5,17 +5,19 @@
 #carmen {height: 620px;}
 #carmen_v {height: 620px;}
 #jolly {height: 620px;}
+#susanna {height: 620px;}
 #estefania {height: 620px;}
 #vanessa {height: 620px;}
 #eila {height: 620px;}
 #cristina {height: 620px;}
 #cristi {height: 620px;}
 
-.desktop #carmen { width: 12.2%; margin: 0 0.1%}
-.desktop #carmen_v { width: 12.2%; margin: 0 0.1%}
-.desktop #estefania { width: 12.2%; margin: 0 0.1%}
-.desktop #vanessa { width: 12.2%; margin: 0 0.1%}
-.desktop #eila { width: 12.2%; margin: 0 0.1%}
-.desktop #cristina { width: 12.2%; margin: 0 0.1%}
-.desktop #cristi { width: 12.2%; margin: 0 0.1%}
-.desktop #jolly { width: 12.2%; margin: 0 0.1%}
+.desktop #carmen { width: 10.8%; margin: 0 0.1%}
+.desktop #carmen_v { width: 10.8%; margin: 0 0.1%}
+.desktop #estefania { width: 10.8%; margin: 0 0.1%}
+.desktop #vanessa { width: 10.8%; margin: 0 0.1%}
+.desktop #eila { width: 10.8%; margin: 0 0.1%}
+.desktop #cristina { width: 10.8%; margin: 0 0.1%}
+.desktop #cristi { width: 10.8%; margin: 0 0.1%}
+.desktop #jolly { width: 10.8%; margin: 0 0.1%}
+.desktop #susanna { width: 10.8%; margin: 0 0.1%}
