--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -15,6 +15,8 @@
     </div>
     <div #cristi class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
+    <div #susanna class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
+    </div>
     <div #vanessa class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
     <div #eila class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
