--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -258,8 +258,8 @@ th {
 }
 
 .process-color-13 {
-    background: magenta !important;
-    color: white !important;
+    background: #c5cbcb !important;
+    color: black !important;
 }
 
 .process-color-14 {
@@ -303,8 +303,8 @@ th {
 }
 
 .process-color-22 {
-    background-color: #c5cbcb !important;
-    color: black !important;
+    background-color: magenta !important;
+    color: white !important;
 }
 
 .process-color-23 {
