--- a/src/admin.hbs
+++ b/src/admin.hbs
@@ -58,7 +58,7 @@
     <script src="/assets/vendor/material.min.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="/assets/vendor/material.select.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="/assets/vendor/nicEdit.js?v={{htmlWebpackPlugin.options.version}}"></script>
-    <script src="/assets/vendor/instascan.min.js"></script>
+    <script src="/assets/vendor/instascan.min.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="../../../../../../../../{{ htmlWebpackPlugin.files.chunks.admin.entry }}"></script>
 </body>
 </html>
