adding search on header

--- a/src/public/components/header/header.html
+++ b/src/public/components/header/header.html
@@ -14,4 +14,8 @@
          class="clickable flaticon-shopping-basket dark-grey-border-color">
         <span #notify class="icon-notify"></span>
     </a>
+    <a #search
+         href="{{searchUrl}}" onclick="window.navigate(this, event)"
+         class="clickable flaticon-search dark-grey-border-color medium-grey-color">
+    </a>
 </div>
