--- a/src/css/style.css
+++ b/src/css/style.css
@@ -418,7 +418,7 @@ input[disabled].button {
     width: 60px;
     height: 34px;
     min-width: auto;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 .switch input {
